--- a/Html/busTicket.html
+++ b/Html/busTicket.html
@@ -76,7 +76,7 @@
                   </li>
                   <li>
                     <a
-                      href="https://www.redbus.in/bushire/?utm_source=website&amp;utm_medium=referral&amp;utm_campaign=Homepage_bushire_banner"
+                      href="../Html/busHire.html"
                       title="redBus Bus Hire"
                       class="site-links gtm-busHire"
                       id="redBus Bus Hire"
