--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.0/font/bootstrap-icons.css"
     />
 
-    <link rel="stylesheet" type="text/css" href="../css/homePage.css" />
+    <link rel="stylesheet" type="text/css" href="./Css/homePage.css" />
   </head>
   <body>
     <nav class="nav">
