--- a/index.html
+++ b/index.html
@@ -889,7 +889,7 @@
         </div>
       </div>
     </footer>
-    <script type="text/javascript" src="../JavaScript/homePage.js"></script>
+    <script type="text/javascript" src="./JavaScript/homePage.js"></script>
     <script
       src="//cdnjs.cloudflare.com/ajax/libs/moment.js/2.7.0/moment.min.js"
       type="text/javascript"
