--- a/index.html
+++ b/index.html
@@ -69,9 +69,9 @@
             </div>
             <div class="nav-item selected">BUS TICKETS</div>
             <div class="nav-item rpool">
-              <a href="../Html/rPool.html" target="_blank"> rPool <span class="rpool-new">New</span></a>
+              <a href="./Html/rPool.html" target="_blank"> rPool <span class="rpool-new">New</span></a>
             </div>
-            <div class="nav-item"><a href="../Html/busHire.html" target="_blank">BUS HIRE</a></div>
+            <div class="nav-item"><a href="./Html/busHire.html" target="_blank">BUS HIRE</a></div>
           </div>
           <div class="nav-left">
             <div class="nav-item-right">Help</div>
@@ -632,7 +632,7 @@
                     <div aria-labelledby="button-label" class="google-btn">
                       <div class="google-flex">
                         <div>
-                          <img src="../Resources/google.png" />
+                          <img src="./Resources/google.png" />
                         </div>
                         <span class="signin-google">Sign in with Google</span>
                       </div>
