--- a/Html/busHire.html
+++ b/Html/busHire.html
@@ -26,7 +26,7 @@
         <div class="pages">
           <div class="leftPages">
             <div>
-              <a href="../Html/homePage.html"
+              <a href="../index.html"
                 ><img
                   src="https://www.redbus.in/bushire/static/webv2/home/logo-rb.svg"
                   alt=""
