--- a/Html/busTicket.html
+++ b/Html/busTicket.html
@@ -48,7 +48,7 @@
       <header id="rh_header" class="home-only-header fixer1">
         <div class="main-header-row">
           <div class="main-header clearfix">
-            <a href="../Html/homePage.html" class="redbus-logo home-redirect"
+            <a href="../index.html" class="redbus-logo home-redirect"
               >redbus</a
             >
 
@@ -67,7 +67,7 @@
                   </li>
                   <li>
                     <a
-                      href=" /rPool/"
+                      href="../Html/rPool.html"
                       title="cars"
                       class="site-links rpool_title"
                       id="cars"
