--- a/Html/busTicket.html
+++ b/Html/busTicket.html
@@ -14,7 +14,7 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" type="text/css" href="../css/busTicket.css" />
+    <link rel="stylesheet" type="text/css" href="../Css/busTicket.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
